[package]
name = "fdl"
description = "Fast deterministic language"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/Aviosium/fdl"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fixed_point = []

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20", features = ["lexer"] }
thiserror = "1.0.40"
